5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4347/executions/1577_1333.log
== SUBMITION (2019-03-21 18:14:40) 
-- CODE:
expressao = (30 – 3 ** 2 + 8 // 3 ** 2 * 10)
print(expressao)
-- EXECUTION TIME:
0.297509
-- ERROR:
  File "/home/codebench/codes/1577/1333/main.py", line 1
    expressao = (30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10)
                    ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:15:49) 
-- CODE:
expressao =(30-3**2+8//3**2*10)
print(expressao)
-- EXECUTION TIME:
0.186344
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
